# iac-labs

./: .gitignore  render.yaml
.github/workflows/: python-app.yml
example-app/: env.sample  log.json  pyproject.toml  run.py
example-app/apps/: __init__.py  config.py
lab-1/: README.md
